2005-08-12 16:36  Andrej Kacian <andrej@kacian.sk>
	* src: clientops.c, clientops-notify.c, silc-gateway-connection.c,
	       silc.c: Don't let SILC client lib to set nickname on login,
	       but set it ourselves. Add mypresence and network event keys
	       to all silc_event events.

2005-08-12 15:25  Andrej Kacian <andrej@kacian.sk>
	* src: clientops.c: Handle unsuccesful channel join.

2005-08-10 21:00  Andrej Kacian <andrej@kacian.sk>
	* src: silc.h, clientops.c, silc-client.c, clientops-notify.c: Use
	       irssi2 macros for event key names where possible.

2005-08-09 23:57  Andrej Kacian <andrej@kacian.sk>
	* src: clientops.c, silc-channel-presence.[ch], clientops-notify.c
	       silc-gateway-connection.[ch], silc.c: Only send
	       gateway_logged_in event after we have logged in and acquired
	       correct nickname.

2005-09-05 13:35  Andrej Kacian <andrej@kacian.sk>
	* src: silc-gateway.h, silc-client.c, silc-local-presence.c,
	       silc-gateway-connection.c, silc-gateway.c: Some fixes to work
	       with current irssi2

2005-07-10 06:53  Andrej Kacian <andrej@kacian.sk>
	* src: silc-client.c, silc-client.h, support.c, support.h,
	       silc-local-presence.c: Load keys directly from memory, if
	       available.

2005-07-08 01:22  Andrej Kacian <andrej@kacian.sk>
	* README: Updated

2005-07-08 01:00  Andrej Kacian <andrej@kacian.sk>
	* src: silc-channel.c, clientops.c, silc-channel-connection.h,
	       silc-channel.h, silc-client.c, clientops-notify.c,
	       silc-message.c, silc-local-presence.c,
	       silc-gateway-connection.c, Makefile.am, silc.c,
	       silc-channel-connection.c: Update to work with current irssi2

2005-06-28 23:05  Andrej Kacian <andrej@kacian.sk>
	* AUTHORS, README: Added some basic documentation.

2005-06-28 21:56  Andrej Kacian <andrej@kacian.sk>
	* src: silc.h, clientops.c, silc-channel.c, silc-presence.h,
	       clientops-notify.c, silc-client.c, support.c, support.h,