@@ -1,3 +1,7 @@
+2005-08-14 13:29  Andrej Kacian <andrej@kacian.sk>
+	* src/silc-channel-connection.c: Fixed segfault on channel connection
+	  deinit.
+
 2005-08-12 16:36  Andrej Kacian <andrej@kacian.sk>
 	* src: clientops.c, clientops-notify.c, silc-gateway-connection.c,
 	       silc.c: Don't let SILC client lib to set nickname on login,
